# any_service

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_25_0514-d0612fbd5e42_added_tables_for_auth_and_profile.py
docs/: use_cases.md
src/: rest_app.py
src/access_control/domain/: entities.py  repositories.py
src/access_control/infrastructure/: provider.py
src/access_control/infrastructure/spicedb/: __init__.py  repositories.py
src/application/dtos/: auth.py
src/application/use_cases/: auth.py  base.py
src/auth/application/: dtos.py  use_cases.py
src/auth/domain/: entities.py  exceptions.py  repositories.py  services.py
src/auth/infrastructure/: provider.py  services.py
src/auth/infrastructure/database/: models.py  repositories.py
src/auth/interfaces/api/: depends.py  exception_handlers.py  routers.py  utils.py
src/common/infrastructure/: database.py  providers.py
src/common/interfaces/api/: exception_handlers.py
src/infrastructure/: config.py  database.py  providers.py
src/interfaces/api/: __init__.py  exception_handlers.py  schemas.py
src/interfaces/api/v1/: __init__.py  utils.py
src/interfaces/api/v1/routers/: __init__.py  auth.py  profile.py  (+1 more)
src/profile/application/: dtos.py  use_cases.py
src/profile/domain/: entities.py  repositories.py
src/profile/infrastructure/: provider.py
src/profile/infrastructure/database/: models.py  repositories.py
tests/auth/application/: fakes.py  test_use_cases.py
tests/e2e/: test_auth_router.py
tests/unit/auth/application/: conftest.py
(+17 files in other folders)
