[project]
name = "any-service"
version = "0.1.0"
description = "A generalized web service that can become a template for further development on Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.6.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.41",
]
