[project]
name = "any-service"
version = "0.1.0"
description = "A generalized web service that can become a template for further development on Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "dishka>=1.6.0",
    "fastapi[standard]>=0.115.13",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "alembic>=1.16.2",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "poethepoet>=0.35.0",
    "ruff>=0.12.0",
    "types-passlib>=1.7.7.20250602",
    "types-python-jose>=3.5.0.20250531",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mypy>=1.0.1",
]

[tool.poe.tasks]
rest = "uvicorn src.rest_app:app --reload"
format = [
    { cmd = "isort ." },
    { cmd = "ruff format ." }
]
check = [
    { cmd = "ruff check ." },
    { cmd = "mypy ." }
]
